Bug 397023 - Default color of imported transaction in the ledger
Summary: Default color of imported transaction in the ledger
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-31 20:50 UTC by antoine
Modified: 2018-08-05 13:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2018-07-31 20:50:35 UTC
Hi,

in kmy 5.0, the default color of imported transactions in the ledger is now "dark brown" and it is really difficult to see the text
I had to change this in the preferences but I think that this color is not a good choice for a default choice

To reproduce the bug:
1> open a file in kmy
2> import transaction with a qif file
3> look at the ledger

xubuntu 18.04
antoine@Frankenstein:~$ apt show kmymoney
Package: kmymoney
Version: 5.0.1-2
Priority: optional
Section: universe/kde
Origin: Ubuntu
Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
Original-Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
Comment 1 Thomas Baumgart 2018-08-05 13:18:19 UTC
Git commit ca5c4d62eba710cbc7f7ec3d12ecac84fd15e4ee by Thomas Baumgart.
Committed on 05/08/2018 at 13:18.
Pushed by tbaumgart into branch 'master'.

Use standard colors with better readability

Summary:
The background colors used for imported and matched transactions is not
readable. This change sets the colors to be more readable. To further
differentiate between Imported and Matched transactions, the matched
transactions are now using bold text.

The first row shows a matched transaction, the second row an imported one

prior to change it looks like this:
{F6176182}

after the change it looks like this
{F6176190}

Reviewers: antoine

Reviewed By: antoine

Subscribers: antoine

Differential Revision: https://phabricator.kde.org/D14623

M  +2    -2    kmymoney/settings/kmymoneysettings_addons.cpp
M  +1    -1    kmymoney/widgets/groupmarker.cpp
M  +5    -0    kmymoney/widgets/stdtransactionmatched.cpp

https://commits.kde.org/kmymoney/ca5c4d62eba710cbc7f7ec3d12ecac84fd15e4ee